attempt 2 fixing image stretching

--- a/src/index.css
+++ b/src/index.css
@@ -62,7 +62,7 @@ h2 {
 
 .photo {
   flex: 1 1 40%;
-  max-width: 480px;
+  max-width: 30%;
   margin-right: 2rem;
   margin-bottom: 2rem;
 }
